# random

./: .gitignore  .travis.yml  CMakeLists.txt  Jamfile  README.md  appveyor.yml  build.jam  index.html  nondet_random.html  random-concepts.html  random-distributions.html  random-generators.html  random-misc.html  random-performance.html  random-variate.html  random_speed.cpp  random_test.cpp  wg21-proposal.html
doc/: Jamfile.v2  buffered_generator.html  concepts.qbk  distributions.qbk  generator_defs.qbk  generators.qbk  index.html  multivariate_normal_distribution.html  parallel.html  python.rst  random.qbk  sprng.html  tutorial.qbk
example/: Jamfile  Jamfile.v2  buffered_examples.cpp  buffered_generator_example.cpp  buffered_uniform_01_example.cpp  mixmax_demo.cpp  multivariate_normal_example.cpp  password.cpp
extra/: Jamfile.v2
meta/: libraries.json
performance/: Jamfile.v2  random_device.cpp  random_speed.cpp
python/: Jamfile  boost_random.py  random.cpp  random.py
src/: get_prime.cpp  primelist_64.cpp  random_device.cpp
test/: CMakeLists.txt  Jamfile  Jamfile.v2  buffered_generator_test.cpp  buffered_generator_timings.cpp  buffered_uniform_01_test.cpp  lcg64_test.cpp  mock_random.hpp  mpi_test.cpp  multiprecision_float_test.cpp  multiprecision_int_test.cpp  multivariate_normal_test.cpp  niederreiter_base2_validade.cpp  parameter_test.cpp  random_test.cpp  sobol_validate.cpp  sprng_parameter_test.cpp  sprng_test.cpp  statistic_tests.cpp  statistic_tests.hpp  test_bench_random.cpp  test_comp_xoshiro256_plus.cpp  test_comp_xoshiro256_plusplus.cpp  (+17 more)
(+94 files in other folders)
